# PlPythonManager

./: .editorconfig  CHANGELOG.md  LISCENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg  sync_docstrings.py
plpy_man/: __init__.py  manager.py  mocks.py
plpython_manager/: __init__.py  py.typed
tests/: .dockerignore  .env  Dockerfile.db  Dockerfile.tester  __init__.py  conftest.py  docker-compose.yml  test.sh  test_plpy_func.py  tests.py
