# Learn about Python packaging with pyproject.toml:
#   https://snarky.ca/what-the-heck-is-pyproject-toml/
#   https://setuptools.readthedocs.io/en/latest/build_meta.html
[tool.poetry]
name = "plpy_man"
version = "0.2.0"
description = "Simplifies working with PlPython"
readme = "README.md"
packages = [
    { include = "plpy_man" },
]
authors = ["Snapper Vibes <learningwithsnapper@gmail.com>"]
keywords = ["plpythonu", "plpython3u"]
license = "MIT"

[tool.poetry.dependencies]
# Requires ast.get_source_segment, a new function in 3.8
python = "^3.8"
SQLAlchemy = "1.4.0b3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "0.720"
black = "^20.8b1"
psycopg2-binary = "^2.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | workspace.py
)/
'''
